# personal-work-report

./: .gitignore  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml
tests/test_100_unit/: test_100_01_01_database_database.py
tests/test_100_unit/test_100_01_02_database_models/: conftest.py  test_100_01_02_01_category.py  test_100_01_02_02_job.py  test_100_01_02_03_job_record.py  test_100_01_02_04_note.py
tests/test_200_func/: conftest.py
tests/test_200_func/test_200_01_01_logic/: test_200_01_01_01_logic_category.py  test_200_01_01_02_logic_job.py  test_200_01_01_03_logic_job_record.py  test_200_01_01_04_logic_note.py
work_report/: config.py  locale.py  logic.py  mediator.py  session_storage.py  view_models.py
work_report/colleagues/: __init__.py  date_selection.py  job_addition_manually.py  job_creation.py  job_logs.py  job_timer.py  language_selection.py  message_area.py  note_area.py  timeline_chart.py  working_hours_schedule.py
work_report/database/: database.py  models.py
