[tool.poetry]
name = "work_report"
version = "0.1.0"
description = ""
authors = ["koei-kaji"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.10.0"
pip = "^22.1.2"
plotly = "^5.8.0"
pydantic = "^1.9.1"
pony = "^0.7.16"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
isort = "*"
black = "*"
pytest-cov = "*"
pylint = "*"
safety = "*"
coverage-badge = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html#isort
[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
[tool.pylint.messages_control]
disable = ["C0330", "C0326"]
extension-pkg-whitelist = "pydantic"

# NOTE: Black compatible configurations
# https://black.readthedocs.io/en/stable/compatible_configs.html#pylint
[tool.pylint.format]
max-line-length = 88

# https://docs.pytest.org/en/stable/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-rsxX -s -x -v --cov=work_report --cov-report=html"